# channels-staticfile-issue

./: .gitignore  .tmuxp.yaml  Dockerfile  Makefile  README.md  THIRD_PARTY.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
docker/: Dockerfile
test_app/: asgi.py  models.py  settings.py  urls.py
test_app/homepage/: __init__.py  apps.py
